--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ pyo3 = { version = "0.18.0", features = ["extension-module"] }
 ark-bls12-381 = "0.4.0"
 ark-serialize = "0.4.0"
 ark-ec = "0.4.0"
+ark-ff = "0.4.0"
 rayon = "1.6.1"
 hex = "0.4.3"
 num-traits = "0.2.15"
