--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,13 @@ crate-type = ["cdylib"]
 pyo3 = { version = "0.18.0", features = ["extension-module"] }
 ark-bls12-381 = "0.4.0"
 ark-serialize = "0.4.0"
-ark-ec = "0.4.0"
+ark-ec =  "0.4.0"
 ark-ff = "0.4.0"
 rayon = "1.6.1"
 hex = "0.4.3"
 num-traits = "0.2.15"
+
+[features]
+default = ["parallel", "asm"]
+parallel = ["ark-ec/parallel", "ark-ff/parallel"]
+asm = ["ark-ff/asm"]
