--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,17 +13,18 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        python-version: ['3.8', '3.9', '3.10', '3.11']
         target: [x86_64, x86, aarch64, armv7, s390x, ppc64le]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: ${{ matrix.python-version }}
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist --sdist --find-interpreter
           manylinux: auto
       - name: Upload wheels
         uses: actions/upload-artifact@v3
@@ -35,18 +36,19 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
+        python-version: ['3.8', '3.9', '3.10', '3.11']
         target: [x64, x86]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: ${{ matrix.python-version }}
           architecture: ${{ matrix.target }}
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist --sdist --find-interpreter
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
@@ -57,17 +59,18 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
+        python-version: ['3.8', '3.9', '3.10', '3.11']
         target: [x86_64, aarch64]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: ${{ matrix.python-version }}
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist --sdist --find-interpreter
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
