Change Scalar input from u128 to biguint

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ name = "py_arkworks_bls12381"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.18.0", features = ["extension-module"] }
+pyo3 = { version = "0.22.2", features = ["extension-module", "num-bigint"] }
 ark-bls12-381 = "0.4.0"
 ark-serialize = "0.4.0"
 ark-ec = "0.4.0"
@@ -17,6 +17,7 @@ ark-ff = "0.4.0"
 rayon = "1.6.1"
 hex = "0.4.3"
 num-traits = "0.2.15"
+num-bigint = "0.4.6"
 
 [features]
 default = ["parallel", "asm"]
