--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -86,11 +86,23 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           pattern: wheels-*
-          merge-multiple: true
+          path: all_artifacts
+
+      - name: Display structure of downloaded artifacts
+        run: ls -R all_artifacts
+
+      - name: Prepare artifacts for upload
+        run: |
+          mkdir -p dist
+          find all_artifacts -name '*.whl' -exec cp {} dist/ \;
+          find all_artifacts -name '*.tar.gz' -exec cp {} dist/ \;
+          echo "Files prepared for upload:"
+          ls -la dist
+
       - name: Publish to PyPI
-        uses: PyO3/maturin-action@v1
         env:
-          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_PASSWORD }}
+        uses: PyO3/maturin-action@v1
         with:
           command: upload
-          args: --skip-existing *
+          args: --skip-existing dist/*
