--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -105,4 +105,4 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           command: upload
-          args: --skip-existing dist/*
+          args: --verbose --skip-existing dist/*
