--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -83,6 +83,7 @@ jobs:
     if: "startsWith(github.ref, 'refs/tags/')"
     needs: [linux, windows, macos]
     steps:
+      - uses: actions/checkout@v3 # Checkout the repository so we can have the pyptoject.toml file
       - uses: actions/download-artifact@v4
         with:
           pattern: wheels-*
