--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -83,14 +83,16 @@ jobs:
     if: "startsWith(github.ref, 'refs/tags/')"
     needs: [linux, windows, macos]
     steps:
+      - uses: actions/checkout@v3 # Checkout the repository so we can have the pyptoject.toml file
       - uses: actions/download-artifact@v4
-        with:
-          pattern: wheels-*
-          merge-multiple: true
+
+      - name: Display structure of downloaded artifacts
+        run: ls -R wheels-*
+
       - name: Publish to PyPI
-        uses: PyO3/maturin-action@v1
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        uses: PyO3/maturin-action@v1
         with:
           command: upload
-          args: --skip-existing *
+          args: --non-interactive --skip-existing wheels-*/*
