--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,6 +7,12 @@ on:
       - "v*.*.*"
   pull_request:
   workflow_dispatch:
+    inputs:
+      do_release:
+        description: 'Publish to PyPI'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   linux:
@@ -80,15 +86,15 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    if: "startsWith(github.ref, 'refs/tags/')"
+    if: |
+      startsWith(github.ref, 'refs/tags/') || 
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.do_release == 'true')
     needs: [linux, windows, macos]
     steps:
-      - uses: actions/checkout@v3 # Checkout the repository so we can have the pyptoject.toml file
+      - uses: actions/checkout@v3
       - uses: actions/download-artifact@v4
-
       - name: Display structure of downloaded artifacts
         run: ls -R wheels-*
-
       - name: Publish to PyPI
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
